add selfLogger and redo logs module archi
