# echo_utilities/src/modules/logs/types/__generated__/log.ts
@@ -15,4 +15,6 @@ export interface Log {
   jobId: number
   category: LogCategory
   message: string
+  callFile?: string
+  callLine?: number
 }
